cmake_minimum_required(VERSION 3.4)
set(name WxWindow)
project(${name})
set(Root ${KAI_HOME}/App/${name}/Source)
file(GLOB_RECURSE SOURCE_FILES ${Root}/*.cpp)
# include_directories(/usr/local/include)
# link_directories(/usr/local/lib)
link_libraries(Executor Core PiLang RhoLang)
add_executable(${name} ${SOURCE_FILES})
target_link_libraries(${name} wx_osx_cocoau_core-3.1 dl)
