# cmake_minimum_required(VERSION 3.4)
# set(name WxWindow)
# project(${name})
# set(Root ${KAI_HOME}/App/${name}/Source)
# file(GLOB_RECURSE SOURCE_FILES ${Root}/*.cpp)
# add_definitions(-DWXUSINGDLL)
# include_directories(/usr/local/lib/wx/include/osx_cocoa-unicode-3.1)
# include_directories(/usr/local/include/wx-3.1)
# link_libraries(Executor Core PiLang RhoLang)
# add_executable(${name} ${SOURCE_FILES})
# target_link_libraries(${name} wx_baseu-3.1 wx_osx_cocoau_gl-3.1 wx_osx_cocoau_core-3.1)
