cmake_minimum_required(VERSION 3.10)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${BIN_HOME}/Test")
set(core_libs Executor Core PiLang RhoLang TauLang)

macro(build_lang_test lang)
    set(name Test${lang})
    project(${name})
    set(home ${TEST_HOME}/Language/${name})
    set(source_path ${home})
    set(header_path ${home}/Include)
    set(script_path ${TEST_HOME}/Language/Test${lang}/Scripts/)
    string(TOLOWER ${lang} ext)
    file(GLOB_RECURSE sources ${source_path}/*.cpp)
    list(APPEND sources ${TEST_HOME}/Language/TestLangCommon.cpp)
    list(APPEND sources ${TEST_HOME}/Common/TestCommon.cpp)
    list(APPEND sources ${TEST_HOME}/Common/MyTestStruct.cpp)
    file(GLOB_RECURSE headers ${header_path}/*.h)
    file(GLOB_RECURSE scripts ${script_path}/*.${ext})
    include_directories(${header_path})
    include_directories(${TEST_HOME}/Include)
    link_libraries(${core_libs} ${GTEST_BOTH_LIBRARIES} ${Boost_LIBRARIES})
    add_executable(${name} ${sources} ${headers} ${scripts})
    source_group("Scripts" FILES ${scripts})
    target_compile_definitions(${name} PRIVATE KAI_SCRIPT_ROOT=${script_path} KAI_LANG_NAME=${lang} KAI_LANG_EXT=.${ext} gtest gtest_main)
    #cotire(${name})
	gtest_add_tests(TARGET ${target}
		${sources}
		)
endmacro()

set(langs Tau Rho Pi)
foreach (lang ${langs})
    build_lang_test(${lang})
	enable_gtest(${lang})
endforeach()

