cmake_minimum_required(VERSION 3.6)
set(name Console)
project(${name})
set(source_path ${APP_HOME}/${name}/Source)
set(header_path ${INCLUDE_HOME}/${name})
file(GLOB_RECURSE sources ${source_path}/*.cpp)
file(GLOB_RECURSE headers ${header_path}/*.h)
add_executable(${name} ${sources} ${headers})
target_link_libraries(${name} Executor Core PiLang RhoLang ${Boost_LIBRARIES})
