cmake_minimum_required(VERSION 3.4)
project(FltkWindow)
set(Root ${KAI_HOME}/App/FltkWindow/Source)
file(GLOB_RECURSE SOURCE_FILES ${Root}/*.cpp)
file(GLOB_RECURSE WINDOW_FILES ${Root}/*.cxx)
include_directories(/usr/local/include)
link_directories(/usr/local/lib)
link_libraries(Executor Core PiLang RhoLang)
add_executable(FltkWindow ${SOURCE_FILES} ${WINDOW_FILES})
#target_link_libraries(Window fltk fltk_forms fltk_gl fltk_images z dl ${x11libs})
target_link_libraries(FltkWindow fltk fltk_forms fltk_gl fltk_images z dl ${FLTK_LIBS})
